anthos-bundles/nist-sp-800-190/proc-mount-type.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPProcMount
metadata:
  name: nist-sp-800-190-proc-mount-type
  labels:
    policycontroller.gke.io/bundleName: nist-sp-800-190
  annotations:
    policycontroller.gke.io/bundleVersion: "202312.1"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'nist-sp-800-190',
        bundleDisplayName: 'NIST SP 800-190',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-nist-sp-800-190',
        bundleVersion: '202312.1',
        bundleDescription: 'Use the NIST SP 800-190 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the NIST SP 800-190 Appendix B controls.',
        controlNumbers: '[CM-3,CM-7]',
        severity: 'UNSPECIFIED',
        description: 'The default `/proc` masks reduce attack surface, and are required. https://kubernetes.io/docs/concepts/security/pod-security-standards/#baseline',
        remediation: 'Containers cannot run with a `procMount` set to a value other than `Default`. Remove `procMount` from your containers or set to `Default`.',
        minimumTemplateLibraryVersion: '1.10.2',
        constraintHash: '0f2eb71e04fe7cf09cc5fdf0768940d7156cfbd29d381864c52610ba098b0584'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
  parameters:
    procMount: Default
