anthos-bundles/nist-sp-800-190/require-binauthz.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireBinAuthZ
metadata:
  name: nist-sp-800-190-require-binauthz
  labels:
    policycontroller.gke.io/bundleName: nist-sp-800-190
  annotations:
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'nist-sp-800-190',
        bundleDisplayName: 'NIST SP 800-190',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-nist-sp-800-190',
        bundleVersion: '202307.0',
        bundleDescription: 'Use the NIST SP 800-190 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the NIST SP 800-190 Appendix B controls.',
        controlNumbers: '[SI-7,CM-6,IA-5,AC-4,AC-6]',
        severity: 'UNASSIGNED',
        description: 'Requires the Binary Authorization Validating Admission Webhook.',
        remediation: 'Containers must use Binary Authorization for container image providence and attestation. See "Set up Binary Authorization" for more information: https://cloud.google.com/binary-authorization/docs/set-up-platform',
        minimumTemplateLibraryVersion: '1.15.2'
      }"
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Namespace
  enforcementAction: dryrun
