anthos-bundles/nist-sp-800-190/restrict-repos.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: nist-sp-800-190-restrict-repos
  annotations:
    policycontroller.gke.io/bundleVersion: "202309.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'nist-sp-800-190',
        bundleDisplayName: 'NIST SP 800-190',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-nist-sp-800-190',
        bundleVersion: '202309.0',
        bundleDescription: 'Use the NIST SP 800-190 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the NIST SP 800-190 Appendix B controls.',
        controlNumbers: '[AC-6]',
        severity: 'UNASSIGNED',
        description: 'Restricts container images to an allowed `repos` list.',
        remediation: 'Containers images must be in the allowed `repos` list. Use a different container image or add allowed repos to the `repos` parameter. See "Images" for more information: https://kubernetes.io/docs/concepts/containers/images/',
        minimumTemplateLibraryVersion: '1.10.1'
      }"
  labels:
    policycontroller.gke.io/bundleName: nist-sp-800-190
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    excludedNamespaces:
      - kube-system
      - cert-manager
      - gke-managed-metrics-server
      - anthos-identity-service
      - gke-system
      - gke-connect
  parameters:
    repos:
      - gcr.io/gke-release/
      - gcr.io/anthos-baremetal-release/
      - gcr.io/gke-on-prem-release/
      - gcr.io/gke-multi-cloud-release/
      - gcr.io/config-management-release/
      - gcr.io/kubebuilder/
      - gcr.io/gkeconnect/
      - gke.gcr.io/
